--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
   mksh.svg: 5d00fb591873ed38ffffc83546a8635768bc97d1
-  mksh-R56.tgz: 4e825095125af0d91525f9a83a364c6d1f4e57cd
+  mksh-R56c.tgz: 9ece178a2da2ed7e6fec86b0663b4fee0482d3c5
