--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
   mksh.svg: 5d00fb591873ed38ffffc83546a8635768bc97d1
-  mksh-R56c.tgz: 9ece178a2da2ed7e6fec86b0663b4fee0482d3c5
+  mksh-R57.tgz: 9df0ab24547f3f29191ae938caf271cb4842bcec
