--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
   mksh.svg: 5d00fb591873ed38ffffc83546a8635768bc97d1
-  mksh-R59.tgz: d88f35b527e7f2cfb44f2dec29b6bf5ef8219cbb
+  mksh-R59b.tgz: b3fbbcdaf5029011e3ec42ed5426a1b0567c4654 
