--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
   mksh.svg: 5d00fb591873ed38ffffc83546a8635768bc97d1
-  mksh-R59b.tgz: b3fbbcdaf5029011e3ec42ed5426a1b0567c4654 
+  mksh-R59c.tgz: 8d5a26fe67ca030bd9e3deff9f3f6e8895183b98
